Some changes to prep/partner
responsiveness, prefered organization logos, new hero image (showing button)

--- a/public/partners.html
+++ b/public/partners.html
@@ -73,10 +73,12 @@
     </div>
   </div>
   <div class="partner-section-1 pf" id="pf">
-    <h1 class="partner-heading">Our Partners</h1>
+		<h1 class="partner-heading">Our Partners<br><img class="underline" src="/img/underline.svg" height="20px" width="280px" style="margin-bottom:50px;"></br></h1>
     <div class="w-container">
       <div class="part-row-1 w-row">
-        <div class="partner-column-1 w-col w-col-4"><img src="/img/pf-color.svg" class="partnerimg"></div>
+        <div class="partner-column-1 w-col w-col-4">
+					<a href="https://www.philadelphiafutures.org" target="_blank"><img src="/img/pf-color.svg" class="partnerimg"></a>
+					</div>
         <div class="part-desc-wrap w-col w-col-8">
           <h3 class="partner-name-right">Philadelphia Futures</h3>
           	<p class="paragraph">Animated by a belief in the importance of empowering children, Philadelphia futures has been changing the lives of Philadelphian high schoolers since 1989. The organization focuses on students who are first in their familes to attend college. <br>
@@ -105,16 +107,20 @@
   </div>
   <div class="partner-section-1 lgr" id="lgr">
     <div class="w-container">
-      <div class="phone-part-img"><img src="/img/lgr-colored_1.svg" width="300" class="partnerimg"></div>
+      <div class="phone-part-img">
+				<a href="https://www.letsgetready.org" target="_blank"><img src="/img/lgr-colored_1.svg" width="300" class="partnerimg"></a>
+			</div>
       <div class="part-row-2 w-row">
         <div class="part-desc-wrap w-col w-col-8">
           <h3 class="partner-name-left">Let&#x27;s Get Ready</h3>
           <p class="paragraph">Let&#x27;s Get Ready was founded in 1998 in a church basement in Mount Vernon, New York. In their first year, Let&#x27;s Get Ready had 20 college student volunteers advising, teaching, and befriending 40 high school students. With that success under its belt, Let&#x27;s Get Ready quickly recognized the power of &quot;students helping students&quot; get into college. <br><br>Let&#x27;s Get Ready has recently agreed to partner with Lemma for their upcoming summer cohort. We&#x27;ve agreed to develop digital classrooms for LGR&#x27;s tutors and students to work together and boost their SAT scores. <br><br>Also, our President and COO, Jack Januszewski, tutored with Let&#x27;s Get Ready while an undergraduate at Boston College. He is elated to be working with them again.</p>
           <h4 class="from-them-2">From Let&#x27;s Get Ready&#x27;s Website:</h4>
           <p class="part-desc">Let’s Get Ready provides free SAT preparation, admission counseling, and post-enrollment mentoring to students from low-income backgrounds and first-generation-to-college students to help them get into and graduate from college. Our peer-driven program is administered by volunteer college students, keeping costs low and ensuring outstanding success rates.</p>
-          <div class="partner-button-wrap w-clearfix"><a href="http://letsgetready.org/donate/" target="_blank" class="partner-button w-button">See How You Can Help Let&#x27;s Get Ready!</a><a href="https://lem.ma/blog" target="_blank" class="partner-button-2 w-button">Read More About Our Partnership!</a></div>
+          <div class="partner-button-wrap w-clearfix"><a href="http://letsgetready.org/donate/" target="_blank" class="partner-button w-button">See How You Can Help Let&#x27;s Get Ready!</a><a href="https://lem.ma/blog/announcing-lets-get-ready/" target="_blank" class="partner-button-2 w-button">Read More About Our Partnership!</a></div>
         </div>
-        <div class="partner-column-2 w-col w-col-4"><img src="/img/lgr-colored.svg" class="partnerimg"></div>
+				<div class="partner-column-2 w-col w-col-4">
+					<a href="https://letsgetready.org" target="_blank"><img src="/img/lgr-colored.svg" class="partnerimg"></a>
+				</div>
       </div>
     </div>
     <div class="lemma-ticker w-container">
@@ -135,7 +141,9 @@
   <div class="partner-section-1 nyc" id="nyc">
     <div class="w-container">
       <div class="part-row-1 w-row">
-        <div class="partner-column-1 w-col w-col-4"><img src="/img/nycares-colored.svg" class="partnerimg"></div>
+        <div class="partner-column-1 w-col w-col-4">
+					<a href="https://www.newyorkcares.org" target="_blank"><img src="/img/nycares-colored.svg" class="partnerimg"></a>
+					</div>
         <div class="part-desc-wrap w-col w-col-8">
           <h3 class="partner-name-right">New York Cares</h3>
           <p class="paragraph">New York Cares' mission is to simplify and inspire greater volunteerism in New York City. The organization was founded in 1987 to simplify the process of volunteering in the city that never sleeps. Since then, the organization has grown to partner with over 1,350 nonprofits and schools, and to staff and manage 1,600 volunteer-led projects each month. Last Year alone, they served 400,000 New Yorkers in need. <br><br>Lemma has recently partnered with New York Cares to deliver our high impact content and insightful data analytics platform to a cohort of high school students in the boroughs. We are very excited to help New York Cares achieve its goals!</p>
@@ -162,7 +170,9 @@
   </div>
   <div class="partner-section-1 opp" id="oppnet">
     <div class="w-container">
-      <div class="phone-part-img"><img src="/img/oppnet-colored.svg" width="300" class="partnerimg"></div>
+      <div class="phone-part-img">
+				<a href="https://opportunitynetwork.org" target="_blank"><img src="/img/oppnet-colored.svg" width="300" class="partnerimg"></a>
+			</div>
       <div class="part-row-2 w-row">
         <div class="part-desc-wrap w-col w-col-8">
           <h3 class="partner-name-left">Opportunity Network</h3>
@@ -171,8 +181,9 @@
           <p class="part-desc">The Opportunity Network works with students from historically and systematically underrepresented communities in developing their skills, knowledge, and passions to achieve their college and career goals. We honor the identities and embrace the power of each member of our community.</p>
           <div class="partner-button-wrap w-clearfix"><a href="https://opportunitynetwork.secure.force.com/pmtx/dn8n__SiteDonation?id=a1kA0000000BcTv" target="_blank" class="partner-button w-button">See How You Can Help Opportunity Network!</a><a href="https://lem.ma/blog/announcement-oppnet" target="_blank" class="partner-button-2 w-button">Read More About Our Partnership!</a></div>
         </div>
-        <div class="partner-column-2 w-col w-col-4"><img src="/img/oppnet-colored.svg" class="partnerimg"></div>
-      </div>
+        <div class="partner-column-2 w-col w-col-4">
+						<a href="https://opportunitynetwork.org" target="_blank"><img src="/img/official-OppNet-logo.svg" width="300" class="partnerimg"></a>
+					</div>
     </div>
     <div class="lemma-ticker w-container">
       <div class="text-block">THIS IS OUR LEMMA TICKER </div>
