--- a/public/prep.html
+++ b/public/prep.html
@@ -27,7 +27,13 @@
 <body class="body">
 	<div data-collapse="medium" data-animation="default" data-duration="400" class="navbar w-nav">
 		<div class="container w-container"><a href="#" class="w-nav-brand"><img src="/img/lemma1920x700.png" width="130" srcset="/img/lemma1920x700-p-500.png 500w, /img/lemma1920x700-p-800.png 800w, /img/lemma1920x700-p-1080.png 1080w, /img/lemma1920x700-p-1600.png 1600w, /img/lemma1920x700.png 1920w" sizes="(max-width: 479px) 93vw, 168px" class="image-17"></a>
-			<nav role="navigation" class="nav-menu w-nav-menu"><a href="#Lemma-Difference" class="nav-link about w-nav-link">About</a><a href="/home/team" class="nav-link teamlink w-nav-link">Team</a><a href="/daily" target="_blank" class="nav-link pod w-nav-link">Problem of the Day</a><a href="/blog" target="_blank" class="nav-link blog w-nav-link">Blog</a><a href="/books/ByrW8zXlGAhREdPsLb_cPA/checkout?refe=%2Ftesting%2Fsat" class="nav-link login w-nav-link">Login</a></nav>
+				<nav role="navigation" class="nav-menu w-nav-menu">
+					<a href="#Lemma-Difference" class="nav-link about w-nav-link">About</a>
+					<a href="/home/team" class="nav-link teamlink w-nav-link">Team</a>
+					<a href="/tracks/sat-math/daily" target="_blank" class="nav-link pod w-nav-link">Problem of the Day</a>
+					<a href="/blog" target="_blank" class="nav-link blog w-nav-link">Blog</a>
+					<a href="/books/ByrW8zXlGAhREdPsLb_cPA/checkout?refe=%2Ftesting%2Fsat" class="nav-link login w-nav-link">Login</a>
+				</nav>
 			<div class="w-nav-button">
 				<div class="w-icon-nav-menu"></div>
 			</div>
@@ -37,10 +43,10 @@
 		<div class="w-container">
 			<div class="w-row">
 				<div class="w-col w-col-3">
-					<a href="/blog/announcing-lets-get-ready/" class="announcement-button w-button">Announcement</a>
+					<a href="/blog" class="announcement-button w-button">Announcement</a>
 				</div>
 				<div class="w-col w-col-9">
-					<div class="announcement-text">Lemma partners with Let&#x27;s Get Ready to help better prepare students for college!</div>
+					<div class="announcement-text">Lemma releases a free Calculus resource for students and educators!</div>
 				</div>
 			</div>
 		</div>
@@ -104,7 +110,7 @@
 	</div>
 	<div data-w-id="1a11049b-3c92-126a-dd13-a1e16d1872c8" style="opacity:0" class="call-banner">
 		<div class="w-container">
-			<div class="call-2">Learn how Lemma can help change your students&#x27; lives</div><a href="/blog/announcing-lets-get-ready/" class="button-6 w-button">Partner with us!</a>
+			<div class="call-2">Lemma partners with great organizations to change their students' lives</div><a href="/partners" class="button-6 w-button">Learn More!</a>
 		</div>
 	</div>
 	<div data-w-id="a4d2c0b6-9b5e-f9d6-e322-1b3fd50bde31" style="opacity:0" class="section-11">
