--- a/public/partners.html
+++ b/public/partners.html
@@ -198,12 +198,13 @@
           <div class="text-block">NUMBER OF MODULES ATTEMPTED</div>
         </div>
       </div>
-    </div>
-    <div class="partner-call">
-      <div class="container-2 w-container">
-        <div class="call">Talk to a member of the Lemma team about partnering with us!</div><a href="#" class="contact-us-button w-button">Contact Us</a></div>
-    </div>
-  </div>
+		</div>
+	</div>
+  <div class="partner-call">
+			<div class="call">Talk to a member of the Lemma team about partnering with us!</div>
+			<a href="https://lem.ma/home/contact" class="contact-us-button w-button">Contact Us</a>
+		</div>
+	</div>
   <div class="why-lemma-partnership" id="lemdif">
     <h1 class="lemma-difference-head">The Lemma Difference</h1>
     <h5 class="lemdif-tag">Our platform is designed to address key areas of all stakeholders in education.</h5>
