--- a/public/partners.html
+++ b/public/partners.html
@@ -73,7 +73,7 @@
     </div>
   </div>
   <div class="partner-section-1 pf" id="pf">
-		<h1 class="partner-heading">Our Partners<br><img class="underline" src="/img/underline.svg" height="20px" width="280px" style="margin-bottom:50px;"></br></h1>
+		<h1 class="partner-heading">Our Partners<br><img class="underline animated pulse" src="/img/underline.svg" height="20px" width="280px" style="margin-bottom:50px;"></br></h1>
     <div class="w-container">
       <div class="part-row-1 w-row">
         <div class="partner-column-1 w-col w-col-4">
