Partners text updates and some other stuff

--- a/public/partners.html
+++ b/public/partners.html
@@ -70,7 +70,7 @@
 						<img src="/img/oppnet-colored.svg" width="100" class="part-hover">
 					</div>
 			</a>
-    </div>
+    </div> 
   </div>
   <div class="partner-section-1 pf" id="pf">
 		<h1 class="partner-heading">Our Partners<br><img class="underline animated pulse" src="/img/underline.svg" height="20px" width="280px" style="margin-bottom:50px;"></br></h1>
@@ -81,28 +81,17 @@
 					</div>
         <div class="part-desc-wrap w-col w-col-8">
           <h3 class="partner-name-right">Philadelphia Futures</h3>
-          	<p class="paragraph">Animated by a belief in the importance of empowering children, Philadelphia futures has been changing the lives of Philadelphian high schoolers since 1989. The organization focuses on students who are first in their familes to attend college. <br>
-							<br>Lemma has partnered with Philadelphia Futures for the past two years. We&#x27;ve built up a great working relationship and have seen some impressive results. Initially, PF was looking for more test prep materials. But PF wanted more than just problems... With their help, Lemma steadily iterated its Data Analytics platform to deliver high-impact insights into their student activity, and real time data that maps their improvement.</p>
+          	<p class="paragraph">Driven by the guiding principle that a college education is the portal to economic self-sufficiency and a satisfying life, Philadelphia Futures provides low-income, first-generatio-to-college students with the tools, resources, and opportunities necessary for admission to and sucsess in college. The students Philadelphia futures serves are provided with a comprehensive, time-tested array of programs designed to reduce the institutional, academic, social, and financial barriers to college success.<br>
+							<br>Lemma has partnered with Philadelphia Futures for the past two years. We have built up a great working relationship and have seen some impressive results. Initially, Futures was looking for some more test-prep materials. However, they quickly saw that Lemma could be more than some quizzing service. With Futures' feedback, Lemma steadily iterated its Data Analytics platform to deliver high-impact insights into student activity, and real time data that charts their improvement.</p>
           <h4 class="from-them-1">From Futures&#x27; Website:</h4>
-          <p class="part-desc"><strong><em>Mission</em></strong>: To provide low income, first generation-to-college students with the tools, resources and opportunities necessary for admission to and success in college.<br>
+          <p class="part-desc"><strong><em>Mission</em></strong>: To provide low income, first-generation-to-college students with the tools, resources and opportunities necessary for admission to and success in college.<br>
 						<br><em><strong>Vision</strong></em>: Philadelphia Futures will transform lives by breaking down barriers that have historically excluded low-income, first-generation-to-college students from college success.</p>
           <div class="partner-button-wrap w-clearfix"><a href="https://www.philadelphiafutures.org/sponsor-a-scholar-overview" target="_blank" class="partner-button w-button">See How You Can Help Philadelphia Futures!</a><a href="https://lem.ma/blog" target="_blank" class="partner-button-2 w-button">Read More About Our Partnership!</a></div>
         </div>
       </div>
     </div>
     <div class="lemma-ticker w-container">
-      <div class="text-block">THIS IS OUR LEMMA TICKER OMG YAY</div>
-      <div class="ticker-row w-row">
-        <div class="w-col w-col-4">
-          <div class="text-block">HOURS SPENT IN LEMMA</div>
-        </div>
-        <div class="w-col w-col-4">
-          <div class="text-block">NUMBERS OF QUESTIONS ANSWERED</div>
-        </div>
-        <div class="w-col w-col-4">
-          <div class="text-block">NUMBER OF MODULES ATTEMPTED</div>
-        </div>
-      </div>
+				<!--TODO: Ticker-->
     </div>
   </div>
   <div class="partner-section-1 lgr" id="lgr">
@@ -124,18 +113,7 @@
       </div>
     </div>
     <div class="lemma-ticker w-container">
-      <div class="text-block">THIS IS OUR LEMMA TICKER OMG YAY</div>
-      <div class="ticker-row w-row">
-        <div class="w-col w-col-4">
-          <div class="text-block">HOURS SPENT IN LEMMA</div>
-        </div>
-        <div class="w-col w-col-4">
-          <div class="text-block">NUMBERS OF QUESTIONS ANSWERED</div>
-        </div>
-        <div class="w-col w-col-4">
-          <div class="text-block">NUMBER OF MODULES ATTEMPTED</div>
-        </div>
-      </div>
+				<!--TODO: Ticker-->
     </div>
   </div>
   <div class="partner-section-1 nyc" id="nyc">
@@ -154,18 +132,7 @@
       </div>
     </div>
     <div class="lemma-ticker w-container">
-      <div class="text-block">THIS IS OUR LEMMA TICKER OMG YAY</div>
-      <div class="ticker-row w-row">
-        <div class="w-col w-col-4">
-          <div class="text-block">HOURS SPENT IN LEMMA</div>
-        </div>
-        <div class="w-col w-col-4">
-          <div class="text-block">NUMBERS OF QUESTIONS ANSWERED</div>
-        </div>
-        <div class="w-col w-col-4">
-          <div class="text-block">NUMBER OF MODULES ATTEMPTED</div>
-        </div>
-      </div>
+				<!--TODO: Ticker-->
     </div>
   </div>
   <div class="partner-section-1 opp" id="oppnet">
@@ -186,18 +153,7 @@
 					</div>
     </div>
     <div class="lemma-ticker w-container">
-      <div class="text-block">THIS IS OUR LEMMA TICKER </div>
-      <div class="ticker-row w-row">
-        <div class="w-col w-col-4">
-          <div class="text-block">HOURS SPENT IN LEMMA</div>
-        </div>
-        <div class="w-col w-col-4">
-          <div class="text-block">NUMBERS OF QUESTIONS ANSWERED</div>
-        </div>
-        <div class="w-col w-col-4">
-          <div class="text-block">NUMBER OF MODULES ATTEMPTED</div>
-        </div>
-      </div>
+				<!--TODO: Ticker-->
 		</div>
 	</div>
   <div class="partner-call">
