--- a/public/prep.html
+++ b/public/prep.html
@@ -59,7 +59,7 @@
 		<div class="container-5 w-container animated fadeIn">
 			<a href="/books/ByrW8zXlGAhREdPsLb_cPA/checkout?refe=%2Ftesting%2Fsat" class="button-4 w-button">Start Your SAT Prep Here!</a>
 		</div>
-		<img src="/img/hero-desk.jpg" width="960" srcset="/img/hero-desk-800.jpeg 800w, /img/hero-desk-1080.jpeg 1080w, /img/hero-desk-1600.jpeg 1600w, /img/hero-desk.jpg 1920w" sizes="(max-width: 991px) 100vw, 960px">
+		<img class="animated fadeIn" src="/img/hero-desk.jpg" width="960" srcset="/img/hero-desk-800.jpeg 800w, /img/hero-desk-1080.jpeg 1080w, /img/hero-desk-1600.jpeg 1600w, /img/hero-desk.jpg 1920w" sizes="(max-width: 991px) 100vw, 960px">
 	</div>
 	<div id="Tagline" class="section-6 animated fadeIn">
 		<h2 class="heading-21">Outstanding math content and support from a team of dedicated educators</h2>
