--- a/public/keyboard-shortcuts-modal/index.html
+++ b/public/keyboard-shortcuts-modal/index.html
@@ -25,7 +25,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal">&times;</button>
-            <h4 class="modal-title">Check our our shortcuts</h4>
+            <h2 class="modal-title">Lemma Shortcuts!</h2>
           </div>
             <div class="modal-body">
               <table class="table">
@@ -61,6 +61,12 @@
                     <td><a href="https://www.lem.ma/content/BAF4B9ysSFANDpVH_RkGlg">Radicals:</a> $\sqrt{x}$</td>
                       <td>
                           <span class="kbd">ctrl</span>+<span class="kbd">r</span>
+                      </td>
+                  </tr>
+                  <tr>
+                    <td><a href="https://www.lem.ma/content/BAF4B9ysSFANDpVH_RkGlg">Cubes and bigger roots</a> $\sqrt[\leftroot{-1}\uproot{2}\scriptstyle n]{x}$</td>
+                      <td>
+                          <span class="kbd">ctrl</span>+<span class="kbd">r</span><span class="kbd">TAB</span><span class="kbd"># you need</span>
                       </td>
                   </tr>
                   <tr>
