Small changes + Checkout rough draft

--- a/public/partners.html
+++ b/public/partners.html
@@ -13,7 +13,7 @@
 	<meta property="fb:app_id" content="810405998993973">
 	<meta property="og:url" content="https://www.lem.ma/prep/">
 	<meta property="og:image" content="https://www.lem.ma/prep/images/og_img.jpg">
-	<title>Lemma - Your Math Tutor</title>
+	<title>Lemma - Education is more than content</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700,700i&subset=greek,latin" rel="stylesheet" type="text/css">
 	<noscript id="deferred-styles">
