--- a/public/prep.html
+++ b/public/prep.html
@@ -11,7 +11,7 @@
 	<meta property="fb:app_id" content="810405998993973">
 	<meta property="og:url" content="https://www.lem.ma/">
 	<meta property="og:image" content="https://www.lem.ma/images/og_img.jpg">
-	<title>Lemma - Your Math Tutor</title>
+	<title>Lemma - Your SAT Tutor</title>
 
 	<link rel="shortcut icon" href="/favicon.ico">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700,700i&subset=greek,latin" rel="stylesheet" type="text/css">
