--- a/public/partners.html
+++ b/public/partners.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Apr 18 2018 22:46:16 GMT+0000 (UTC)  -->
 <html data-wf-page="5aaff1a7c82e200682a03794" data-wf-site="5aaff1a7c82e2047d1a03793">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 
-	<meta name="description" content="Lemma partners with high-impact organizations to deliver top-tier SAT Prep content over an intuitive platform.">
-	<meta name="og:description" content="Lemma partners with high-impact organizations to deliver top-tier SAT Prep content over an intuitive platform.">
-	<meta property="og:title" content="Lemma | SAT Prep Partners">
+	<meta itemprop="name" content="Lemma">
+	<meta property="og:title" content="Lemma | SAT Partnerships">
+	<meta name="twitter:title" content="Lemma">
+	<meta name="description" content="Lemma's SAT platform provides College Access organizations with key insights, custom support, and better test results. Check out who else we're working with!">
+	<meta itemprop="description" content="Lemma's SAT platform provides College Access organizations with key insights, custom support, and better test results. Check out who we're working with here!">
+	<meta property="og:description" content="Lemma's SAT platform provides College Access organizations with key insights, custom support, and better test results. Check out who we're working with here!">
+	<meta name="twitter:description" content"Lemma's SAT platform provides College Access organizations with key insights, custom support, and better test results. Check out who we're working with here!">
+
 	<meta property="og:type" content="website">
 	<meta property="fb:app_id" content="810405998993973">
 	<meta property="og:url" content="https://www.lem.ma/prep/">
