--- a/public/prep.html
+++ b/public/prep.html
@@ -4,14 +4,20 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 
-	<meta name="description" content="Lemma builds competence by providing amazing content, practice and support over an innovative platform. Get started preparing for the SAT and more.">
-	<meta name="og:description" content="Lemma builds competence by providing amazing content, practice and support over an innovative platform. Get started preparing for the SAT AP Calculus and more.">
+	<meta itemprop="name" content="Lemma">
 	<meta property="og:title" content="Lemma | SAT Prep">
+	<meta name="twitter:title" content="Lemma">
+	<meta name="description" content="Lemma SAT Prep combines powerful data analytics with top-tier content and meaningful support to help boost your SAT scores. Start your free trial today!">
+	<meta itemprop="description" content="Lemma SAT Prep combines powerful data analytics with top-tier content and meaningful support to help boost your SAT scores. Start your free trial today!">
+	<meta property="og:description" content="Lemma SAT Prep combines powerful data analytics with top-tier content and meaningful support to help boost your SAT scores. Start your free trial today!">
+	<meta name="twitter:description" content"Lemma SAT Prep combines powerful data analytics with top-tier content and meaningful support to help boost your SAT scores. Start your free trial today!">
+	
 	<meta property="og:type" content="website">
 	<meta property="fb:app_id" content="810405998993973">
 	<meta property="og:url" content="https://www.lem.ma/">
 	<meta property="og:image" content="https://www.lem.ma/images/og_img.jpg">
-	<title>Lemma - Your SAT Tutor</title>
+
+	<title>Lemma - Education is more than content</title>
 
 	<link rel="shortcut icon" href="/favicon.ico">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700,700i&subset=greek,latin" rel="stylesheet" type="text/css">
