--- a/public/pricing.html
+++ b/public/pricing.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
   
-    <meta name="description" content="Lemma partners with high-impact organizations to deliver top-tier SAT Prep content over an intuitive platform.">
-    <meta name="og:description" content="Lemma partners with high-impact organizations to deliver top-tier SAT Prep content over an intuitive platform.">
-    <meta property="og:title" content="Lemma | SAT Prep Partners">
+    <meta itemprop="name" content="Lemma">
+    <meta property="og:title" content="Lemma | SAT Pricing">
+    <meta name="twitter:title" content="Lemma">
+    <meta name="description" content="Sign up for Lemma's SAT prep today! Plans start at $12.50 per month. Definitely less expensive than a private tutor!">
+    <meta itemprop="description" content="Sign up for Lemma's SAT prep today! Plans start at $12.50 per month. Definitely less expensive than a private tutor!">
+    <meta property="og:description" content="Sign up for Lemma's SAT prep today! Plans start at $12.50 per month. Definitely less expensive than a private tutor!">
+    <meta name="twitter:description" content"Sign up for Lemma's SAT prep today! Plans start at $12.50 per month. Definitely less expensive than a private tutor!">
+    
+    
     <meta property="og:type" content="website">
     <meta property="fb:app_id" content="810405998993973">
     <meta property="og:url" content="https://www.lem.ma/prep/">
@@ -135,6 +141,6 @@
           $("pricing-product-top blue", pricing-product-button blue").addClass("gray);
         })-->
         <!--Also, ideally the text would change here? something like "already have!"-->
-      <!--TODO: Responsive Tablet, mobile. I'm not sure we should have this page on phones. idk. it involves making the credit card thing work well on mobile too which kinda blows. -->
+      <!--TODO: Responsive Tablet, mobile. I'm not sure we should have this page on phones.-->
   </body>
 </html>
