lots of updates.
lots of little changes around the place. Added BTNY and KIPP dummy spot. currently displaying "none" in preparation of reciept of contract.

--- a/public/prep.html
+++ b/public/prep.html
@@ -70,7 +70,10 @@
 	</div>
 	<div id="Tagline" class="section-6 animated fadeIn">
 		<h2 class="heading-21">Outstanding math content and support from a team of dedicated educators</h2>
-		<div class="textblock-12">$49 for a full year!</div>
+		<div class="textblock-12">Plans start at $12.50 per month!
+			<br>
+			<a href="/pricing" class="pricing-button w-button">Check Out Our Plans!</a>
+		</div>
 	</div>
 	<div id="Lemma-Difference" data-w-id="b93b2bba-f83e-851c-cb32-3aef626fce2f" style="opacity:0" class="lemma-difference">
 		<div>
@@ -111,6 +114,14 @@
 				</a>
 				<a href="https://opportunitynetwork.org/" target="_blank">
 					<img class="partner-image" data-src="/img/oppnet-colored.svg" data-ix="icon-grow"/>
+				</a>
+				<a href="http://www.btny.org/" target="_blank">
+					<img class="partner-image"
+					data-src="/img/btny-colored.png" data-ix="icon-grow"/>
+				</a>
+				<a href="https://www.kippchicago.org/" class="kipp" target="_blank">
+					<img class="partner-image"
+					data-src="/img/kipp-colored.svg" data-ix="icon-grow"/>
 				</a>
 			</div>
 		</div>
