--- a/public/partners.html
+++ b/public/partners.html
@@ -33,7 +33,8 @@
 <body class="body">
 	<body class="body">
 		<div data-collapse="medium" data-animation="default" data-duration="400" class="navbar w-nav">
-			<div class="container w-container"><a href="#" class="w-nav-brand"><img src="/img/lemma1920x700.png" width="130" srcset="/img/lemma1920x700-p-500.png 500w, /img/lemma1920x700-p-800.png 800w, /img/lemma1920x700-p-1080.png 1080w, /img/lemma1920x700-p-1600.png 1600w, /img/lemma1920x700.png 1920w" sizes="(max-width: 479px) 93vw, 168px" class="image-17"></a>
+			<div class="container w-container">
+				<a href="https://lem.ma/home" class="w-nav-brand"><img src="/img/lemma1920x700.png" width="130" srcset="/img/lemma1920x700-p-500.png 500w, /img/lemma1920x700-p-800.png 800w, /img/lemma1920x700-p-1080.png 1080w, /img/lemma1920x700-p-1600.png 1600w, /img/lemma1920x700.png 1920w" sizes="(max-width: 479px) 93vw, 168px" class="image-17"></a>
 				<nav role="navigation" class="nav-menu w-nav-menu">
 					<a href="#Lemma-Difference" class="nav-link about w-nav-link">About</a>
 					<a href="/home/team" class="nav-link teamlink w-nav-link">Team</a>
@@ -68,10 +69,21 @@
 	      	<div class="nycares-swap">
 						<img src="/img/nycares-colored.svg" width="100" class="part-hover">
 					</div>
+			</a>
 			<a href="#oppnet">
 	      	<div class="opp-swap">
 						<img src="/img/oppnet-colored.svg" width="100" class="part-hover">
 					</div>
+			</a>
+			<a href="#btny">
+				<div class="btny-swap">
+					<img src="/img/btny-colored.png" width="100" class="part-hover">
+				</div>
+			</a>
+			<a href="#kipp">
+				<div class="kipp-swap kipp">
+					<img src="/img/kipp-colored.svg" width="100" class="part-hover">
+				</div>
 			</a>
     </div> 
   </div>
@@ -159,6 +171,57 @@
 				<!--TODO: Ticker-->
 		</div>
 	</div>
+	<div class="partner-section-1 btny" id="btny">
+    <div class="w-container">
+      <div class="phone-part-img">
+				<a href="https://www.btny.org" target="_blank"><img src="/img/btny-colored.png" width="300" class="partnerimg"></a>
+			</div>
+      <div class="part-row-1 w-row">
+				<div class="partner-column-1 w-col w-col-4">
+						<a href="https://www.btny.org" target="_blank"><img src="/img/btny-colored.png" width="300" class="partnerimg"></a>
+				</div>
+        <div class="part-desc-wrap w-col w-col-8">
+          <h3 class="partner-name-right">Breakthrough New York</h3>
+          <p class="paragraph">Founded in 1999 as a middle school program, Breakthrough has grown to now support around five-hundred students each year on their journey to and through college. BTNY uses a "students-teaching-students model" to foster personal development, and inspire greater achievement. Breakthrough boasts a 96% College matriculation rate and many former students go on to be teachers themselves!<br><br>Lemma has partnered with BTNY to provide a small cohort of their students currently enrolled in boarding schools with a "distance learning" SAT program. Our platform is well suited to reach students who cannot attend Breakthrough's in-person study sessions. </p>
+          <h4 class="from-them-1">From Breakthrough&#x27;s Website:</h4>
+          <p class="part-desc">Breakthrough New York transforms the lives of talented kids from low-income backgrounds by providing educational support from middle school through college and into careers...Our goal is to create leaders who break the cycle of poverty in their families and effect positive change in their communities.</p>
+          <div class="partner-button-wrap w-clearfix"><a href="http://www.btny.org/ways-to-support/" target="_blank" class="partner-button w-button">See How You Can Help Breakthrough!</a><a href="https://lem.ma/blog/" target="_blank" class="partner-button-2 w-button">Read More About Our Partnership!</a></div>
+        </div>
+    </div>
+    <div class="lemma-ticker w-container">
+				<!--TODO: Ticker-->
+		</div>
+	</div>
+
+
+
+
+	<div class="partner-section-1 kipp" id="kipp">
+			<div class="w-container">
+				<div class="phone-part-img">
+					<a href="https://www.kippchicago.org" target="_blank"><img src="/img/kipp-colored.svg" width="300" class="partnerimg"></a>
+				</div>
+				<div class="part-row-2 w-row">
+					<div class="part-desc-wrap w-col w-col-8">
+						<h3 class="partner-name-left">KIPP : Chicago</h3>
+						<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						<h4 class="from-them-2">More from KIPP:</h4>
+						<p class="part-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						<div class="partner-button-wrap w-clearfix"><a href="https://www.kippchicago.org/" target="_blank" class="partner-button w-button">Learn More About KIPP Charter Schools!</a><a href="https://lem.ma/blog" target="_blank" class="partner-button-2 w-button">Read More About Our Partnership!</a></div>
+					</div>
+					<div class="partner-column-2 w-col w-col-4">
+							<a href="https://www.kippchicago.org/" target="_blank"><img src="/img/kipp-colored.svg" width="300" class="partnerimg"></a>
+						</div>
+			</div>
+			<div class="lemma-ticker w-container">
+					<!--TODO: Ticker-->
+			</div>
+		</div>
+	</div>
+
+
+
+
   <div class="partner-call">
 			<div class="call">Talk to a member of the Lemma team about partnering with us!</div>
 			<a href="https://lem.ma/home/contact" class="contact-us-button w-button">Contact Us</a>
