--- a/public/pricing.html
+++ b/public/pricing.html
@@ -48,9 +48,8 @@
     </div>
     <div class="pricing-hero">
       <h1 class="pricing-head">Upgrade your Lemma account</h1>
-      <div class="pricing-header-text-wrap">
-        <div class="pricing-hero-call">Still not sure? <a href="https://lem.ma/blog">Check out our testimonials!</a></div>
-      </div>
+        <div class="pricing-hero-call">Still not sure? <a href="https://lem.ma/blog">Check out our testimonials!</a>
+        </div>
       <div class="pricing-header-button-wrap">
         <div class="pricing-teacher-call">Are you a College Access organization looking to leverage Lemma?</div><a href="https://lem.ma/home/contact" class="pricing-header-button blue">Contact us for pricing!</a></div>
     </div>
@@ -60,7 +59,7 @@
           <h1 class="pricing-productname">SAT Free</h1>
           <div class="pricing-product-desc-wrap">
             <div class="pricing-price-wrap">
-              <div class="pricing-price">Free</div>
+              <div class="pricing-price" style="height:64px;">Free</div>
             </div>
             <div class="pricing-product-desc">Our basic version of Lemma Prep to introduce you to our system!</div>
             <div class="pricing-button-wrap"><a href="#" class="pricing-button blue">Get Started!</a></div>
@@ -69,7 +68,7 @@
           <li class="pricing-list-item">The Lemma Button</li>
           <li class="pricing-list-item">Your question history</li>
           <li class="pricing-list-item">2 complete SAT Practice Tests</li>
-          <li class="pricing-list-item">Open access to our SAT problems!</li>
+          <li class="pricing-list-item">Access to our problem Explorer</li>
         </ul>
         <ul class="pricing-features-greyed">
           <li class="pricing-list-item">Fair-weather tutoring support</li>
@@ -94,7 +93,7 @@
         <ul class="pricing-features">
           <li class="pricing-list-item">The Lemma Button</li>
           <li class="pricing-list-item">Your question history</li>
-          <li class="pricing-list-item">Open access to our SAT problems!</li>
+          <li class="pricing-list-item">Access to our problem Explorer</li>
           <li class="pricing-list-item">Additional access to other Lemma content</li>
           <li class="pricing-list-item">Unlimited Practice Tests</li>
           <li class="pricing-list-item">Fair-weather tutoring support</li>
@@ -114,7 +113,7 @@
         <h1 class="pricing-productname">SAT Mentored</h1>
         <div class="pricing-product-desc-wrap">
           <div class="pricing-price-wrap">
-            <div class="pricing-price">$25.00<span style="font-size: 16px; font-weight: 300; color: gray"> per month</span><br><span style="font-size: 14px; font-weight: 200; color: grey">*billed annually</span></div>
+            <div class="pricing-price">$25.00<span style="font-size: 16px; font-weight: 300; color: gray;"> per month</span><br><span style="font-size: 14px; font-weight: 200; color: grey;">*billed annually</span></div>
           </div>
           <div class="pricing-product-desc">The Lemma team works with you more intensely to boost your score!</div>
           <div class="pricing-button-wrap"><a href="#" class="pricing-button yellow">Get Started!</a></div>
@@ -125,12 +124,9 @@
           <li class="pricing-list-item">Study scheduling from the Lemma Team</li>
           <li class="pricing-list-item">The complete &quot;Essentials of SAT Math&quot; course from Pavel Grinfeld</li>
           <li class="pricing-list-item">Personalized content curated by the Lemma team based on an audit of your skills and weak-points</li>
-          <li class="pricing-list-item">3 hours of virtual tutoring from Pavel</li>
+          <li class="pricing-list-item">3 hours of virtual tutoring from our experts!<br><span style="font-size: 14px; color: gray;">(you can always add more!)</span></li>
         </ul>
       </div>
-    </div>
-    <div class="pricing-wrap-mob">
-        nope
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="js/webflow.js" type="text/javascript"></script>
