links and blanks

--- a/public/partners.html
+++ b/public/partners.html
@@ -251,7 +251,7 @@
           <div class="diftext">- Elite mathematical content authored by Pavel Grinfeld, PhD.</div>
           <div class="diftext">- Video lessons engage viewers with interruptive questions, and automatic pausing</div>
           <div class="diftext">- Use our materials to flip a class, plug gaps in your curriculum, or to replace an existing solution!</div>
-						<a href="#" class="tutorial-link">Watch this to learn more</a>
+						<a href="https://lem.ma/19r" target="_blank" class="tutorial-link">Watch this to learn more</a>
 						</div>
         <div class="lem-dif-img-wrap w-col w-col-5"><img src="/img/hundreds-of-problems.svg" class="lemdif-img"></div>
       </div>
@@ -265,14 +265,14 @@
           <div class="diftext">- All student activity in Lemma is monitored, catalogued, and secured</div>
           <div class="diftext">- PowerPlayback allows for tutors, administrators, and educators to see a video recording of how their students are solving problems</div>
           <div class="diftext">- Our algorthim works to holistically assess student comptence and create a personalized</div>
-					<a href="#" class="tutorial-link">Watch this to learn more</a></div>
+					<a href="https://lem.ma/017" target="_blank" class="tutorial-link">Watch this to learn more</a></div>
       </div>
       <div class="difrow animated fadeIn w-row">
         <div class="column-6 w-col w-col-7">
           <h4 class="difhead">Better Connections</h4>
           <div class="diftext">- Students ask questions directly to their instructors</div>
           <div class="diftext">- Educators leverage direct communication with the PowerPlayback to see student mistakes</div>
-          <div class="diftext">- Students feel personally cared for and empowered</div><a href="#" class="tutorial-link">Watch this to learn more</a></div>
+          <div class="diftext">- Students feel personally cared for and empowered</div><a href="https://lem.ma/vy" target="_blank" class="tutorial-link">Watch this to learn more</a></div>
         <div class="lem-dif-img-wrap w-col w-col-5"><img src="/img/communications-suite.svg" class="lemdif-img"></div>
       </div>
     </div>
