Small html and build fixes

--- a/public/partners.html
+++ b/public/partners.html
@@ -10,7 +10,7 @@
 	<meta name="description" content="Lemma's SAT platform provides College Access organizations with key insights, custom support, and better test results. Check out who else we're working with!">
 	<meta itemprop="description" content="Lemma's SAT platform provides College Access organizations with key insights, custom support, and better test results. Check out who we're working with here!">
 	<meta property="og:description" content="Lemma's SAT platform provides College Access organizations with key insights, custom support, and better test results. Check out who we're working with here!">
-	<meta name="twitter:description" content"Lemma's SAT platform provides College Access organizations with key insights, custom support, and better test results. Check out who we're working with here!">
+	<meta name="twitter:description" content="Lemma's SAT platform provides College Access organizations with key insights, custom support, and better test results. Check out who we're working with here!">
 
 	<meta property="og:type" content="website">
 	<meta property="fb:app_id" content="810405998993973">
