--- a/public/prep.html
+++ b/public/prep.html
@@ -10,7 +10,7 @@
 	<meta name="description" content="Lemma SAT Prep combines powerful data analytics with top-tier content and meaningful support to help boost your SAT scores. Start your free trial today!">
 	<meta itemprop="description" content="Lemma SAT Prep combines powerful data analytics with top-tier content and meaningful support to help boost your SAT scores. Start your free trial today!">
 	<meta property="og:description" content="Lemma SAT Prep combines powerful data analytics with top-tier content and meaningful support to help boost your SAT scores. Start your free trial today!">
-	<meta name="twitter:description" content"Lemma SAT Prep combines powerful data analytics with top-tier content and meaningful support to help boost your SAT scores. Start your free trial today!">
+	<meta name="twitter:description" content="Lemma SAT Prep combines powerful data analytics with top-tier content and meaningful support to help boost your SAT scores. Start your free trial today!">
 	
 	<meta property="og:type" content="website">
 	<meta property="fb:app_id" content="810405998993973">
