--- a/public/pricing.html
+++ b/public/pricing.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Sign up for Lemma's SAT prep today! Plans start at $12.50 per month. Definitely less expensive than a private tutor!">
     <meta itemprop="description" content="Sign up for Lemma's SAT prep today! Plans start at $12.50 per month. Definitely less expensive than a private tutor!">
     <meta property="og:description" content="Sign up for Lemma's SAT prep today! Plans start at $12.50 per month. Definitely less expensive than a private tutor!">
-    <meta name="twitter:description" content"Sign up for Lemma's SAT prep today! Plans start at $12.50 per month. Definitely less expensive than a private tutor!">
+    <meta name="twitter:description" content="Sign up for Lemma's SAT prep today! Plans start at $12.50 per month. Definitely less expensive than a private tutor!">
     
     
     <meta property="og:type" content="website">
@@ -128,8 +128,10 @@
         </ul>
       </div>
     </div>
+    <!--
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="js/webflow.js" type="text/javascript"></script>
+    -->
 
       <!--TODO: a JS/jquery command IF user has a free account... 
         $[person has account].[whatever](function(){
