--- a/public/partners.html
+++ b/public/partners.html
@@ -62,7 +62,7 @@
 			</a>
 			<a href="#lgr">
 	      	<div class="lgr-swap">
-						<img src="/img/lgr-colored_2.svg" width="100" class="part-hover">
+						<img src="/img/lgr-colored.svg" width="100" class="part-hover">
 					</div>
 			</a>
 			<a href="#nyc">
@@ -112,7 +112,7 @@
   <div class="partner-section-1 lgr" id="lgr">
     <div class="w-container">
       <div class="phone-part-img">
-				<a href="https://www.letsgetready.org" target="_blank"><img src="/img/lgr-colored_1.svg" width="300" class="partnerimg"></a>
+				<a href="https://www.letsgetready.org" target="_blank"><img src="/img/lgr-colored.svg" width="300" class="partnerimg"></a>
 			</div>
       <div class="part-row-2 w-row">
         <div class="part-desc-wrap w-col w-col-8">
