--- a/public/prep.html
+++ b/public/prep.html
@@ -107,7 +107,7 @@
 					<img class="partner-image" data-src="/img/pf-color.svg" data-ix="icon-grow"/>
 				</a>
 				<a href="http://letsgetready.org/" target="_blank">
-					<img class="partner-image" data-src="/img/lgr-colored_1.svg" data-ix="icon-grow"/>
+					<img class="partner-image" data-src="/img/lgr-colored.svg" data-ix="icon-grow"/>
 				</a>
 				<a href="https://www.newyorkcares.org/" target="_blank">
 					<img class="partner-image" data-src="/img/nycares-colored.svg" data-ix="icon-grow"/>
